Update APIs to fix response structure

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.31.6",
+    "@clerk/nextjs": "^6.32.2",
     "@clerk/themes": "^2.2.5",
-    "@google/generative-ai": "latest",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -29,7 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "html2pdf.js": "^0.10.2",
+    "html2pdf.js": "^0.10.3",
     "inngest": "^3.40.1",
     "lucide-react": "^0.471.2",
     "mammoth": "^1.10.0",
@@ -37,12 +37,12 @@
     "next-themes": "^0.4.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.62.0",
+    "react-hook-form": "^7.63.0",
     "react-markdown": "^9.1.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.4",
     "spinners": "^1.2.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
