--- a/.dockerignore
+++ b/.dockerignore
@@ -1,41 +1,15 @@
-# Node modules (will be installed in Docker)
 node_modules
 npm-debug.log
-yarn-error.log
-.pnp
-.pnp.js
-
-# Environment variables
-.env.local
-.env.development
-.env.test
-.env.production.local
-.env
-*.env
-
-# Next.js build outputs
+.yarn
+.pnp.*
 .next
 out
 dist
-
-# Logs
 logs
 *.log
-*.tsbuildinfo
-
-# IDE / OS files
 .vscode
 .idea
-*.sublime-workspace
-*.sublime-project
 .DS_Store
-Thumbs.db
-
-# Git
-.git
-.gitignore
-
-# Optional test / storybook folders
+.env*
+/.git
 coverage
-*.stories.js
-*.stories.tsx
