--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,35 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Node modules and package managers
+node_modules
 npm-debug.log*
-yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+.pnpm-store
+.yarn
+.pnp.*
 
-# env files (can opt-in for committing if needed)
-.env*
-.env.local
+# Build output
+.next
+out
+dist
+coverage
 
-# vercel
-.vercel
+# Logs
+logs
+*.log
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Editor and system files
+.vscode
+.idea
+.DS_Store
 
-/lib/generated/prisma
+# Environment and secrets
+.env
+.env.*
+!.env.example
 
-# clerk configuration (can include secrets)
-/.clerk/
+# Git and VCS
+.git
+.gitignore
+
+# Other unnecessary files
+*.swp
+*.swo
